--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,3 +6,20 @@ body h1{
   font-weight: 500;
   font-style: normal;
 }
+
+.carousel-item img{
+  width: 100%;
+  height:80vh;
+}
+
+/* .card-body{
+  min-width: 50%;
+  max-height: 200px;
+} */
+
+.team-img {
+    width: 180px;
+    height: 180px;
+    object-fit: cover;   /* makes image auto-crop nicely */
+    object-position: center;
+}
